argocd/unifi/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: unifi
  name: unifi-controller
  labels:
    app: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      containers:
      - name: unifi-controller
        image: linuxserver/unifi-controller
        imagePullPolicy: IfNotPresent
        ports:
        - name: device-comm
          containerPort: 8080
          protocol: TCP
        - name: stun
          containerPort: 3478
          protocol: UDP
        - name: default-console
          containerPort: 8443
          protocol: TCP
        - name: secure-redirect
          containerPort: 8843
          protocol: TCP
        - name: http-redirect
          containerPort: 8880
          protocol: TCP
        - name: speedtest
          containerPort: 6789
          protocol: TCP
        - name: unifi-disc
          containerPort: 10001
          protocol: UDP
        - name: unifi-disc-l2
          containerPort: 1900
          protocol: UDP
        resources:
          requests:
            cpu: "150m"
            memory: "1024Mi"
          limits:
            cpu: "512m"
            memory: "1536Mi"
        volumeMounts:
          - name: unifi-data
            mountPath: /config
          - name: unifi-backups
            mountPath: /usr/lib/unifi/data/backup/autobackup
      volumes:
        - name: unifi-data
          persistentVolumeClaim:
            claimName: unifi-pvc
        - name: unifi-backups
          persistentVolumeClaim:
            claimName: backup-pvc
