argocd/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: unifi-svc
  name: unifi-controller
spec:
  type: LoadBalancer
  loadBalancerIP: 10.1.200.26
  ports:
    - name: device-comm
      port: 8080
      protocol: TCP
    - name: stun
      port: 3478
      protocol: UDP
    - name: default-console
      port: 8443
      protocol: TCP
    - name: secure-redirect
      port: 8843
      protocol: TCP
    - name: http-redirect
      port: 8880
      protocol: TCP
    - name: speedtest
      port: 6789
      protocol: TCP
    - name: unifi-disc
      port: 10001
      protocol: UDP
    - name: unifi-disc-l2
      port: 1900
      protocol: UDP
